# blackmagic

./: .gitignore  .gitmodules  CMakeLists.txt  Toolchain_ARMEmbedded.cmake
scripts/stubs/: Makefile
src/: CMakeLists.txt  Makefile  Toolchain_ARMEmbedded.cmake  adiv5_swdp.c  command.c  cortexm.c  gdb_main.c  gdb_packet.c  hex_utils.c  jtag_scan.c  lpc43xx.c  main.c  stm32l1.c
src/include/: gdb_packet.h  hex_utils.h
upgrade/: bindata.S
